chore: cleanup config files and remove comments